/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'

    id "me.champeau.jmh" version "latest.release"
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    testImplementation libs.org.openjdk.jmh.jmh.core
    testImplementation libs.org.openjdk.jmh.jmh.generator.annprocess
    testImplementation libs.org.junit.jupiter.junit.jupiter.api
    testImplementation libs.org.assertj.assertj.core
    testImplementation libs.org.junit.jupiter.junit.jupiter.engine
}

group = 'com.davidvlijmincx.lio'
version = '0.1-SNAPSHOT'
description = 'JUring'
java.sourceCompatibility = JavaVersion.VERSION_23

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

jmh {
    jvmArgs = [
            "--enable-native-access=ALL-UNNAMED"
            , "--add-opens=java.base/sun.misc=ALL-UNNAMED"
            , "--add-opens=java.base/java.lang=ALL-UNNAMED"

    ]
}
